[project]
name = "akatz-loop-nodes"
description = "Custom nodes for loops, flow control, lazy switches, image processing, and latent manipulation."
version = "0.1.3"
license = { file = "LICENSE" }
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/akatz-ai/Akatz-Loop-Nodes"

[tool.comfy]
PublisherId = "akatz"
DisplayName = "Akatz-Loop-Nodes"
Icon = "https://avatars.githubusercontent.com/u/170280086?v=4"
